kubernetes/apps/media/prowlarr/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
{
  apiVersion: "gateway.envoyproxy.io/v1alpha1",
  kind: "SecurityPolicy",
  metadata: {
    name: "prowlarr-route-oidc",
  },
  spec: {
    targetRefs: [{
      group: "gateway.networking.k8s.io",
      kind: "HTTPRoute",
      name: "prowlarr",
    }],
    oidc: {
      provider: {
        issuer: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET",
      },
      clientID: "24403095-d528-408a-9252-34d1d3a2e74c",
      clientSecret: {
        name: "prowlarr-secret",
      },
      redirectURL: "https://prowlarr.darkfellanetwork.com/oauth2/callback",
      logoutPath: "/logout",
      cookieNames: {
        accessToken: "prowlarr-access-token",
        idToken: "prowlarr-id-token",
      },
    },
    jwt: {
      providers: [{
        name: "keycloak",
        issuer: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET",
        remoteJWKS: {
          uri: "https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs",
        },
        extractFrom: {
          cookies: [
            "prowlarr-access-token",
          ],
        },
      }],
    },
    authorization: {
      defaultAction: "Deny",
      rules: [{
        action: "Allow",
        name: "allow-by-group",
        principal: {
          jwt: {
            provider: "keycloak",
            claims: [{
              name: "groups",
              values: [
                "media-admin",
              ],
            }],
          },
        },
      }, {
        action: "Allow",
        name: "allow-by-email",
        principal: {
          jwt: {
            provider: "keycloak",
            claims: [{
              name: "email",
              values: [
                "georgi.panov@darkfellanetwork.com",
              ],
            }],
          },
        },
      }],
    },
  },
}
